#402 Remove deprecated JDK options